--- a/src/assets/styles/components/_features.scss
+++ b/src/assets/styles/components/_features.scss
@@ -1,19 +1,33 @@
-.icon-aside > svg {
-  font-size: 50px;
-}
-.box-content {
-  h4 {
-    color: $black;
-    line-height: 24px;
-    font-size: 22px;
-  }
-  p {
-    color: $gray;
-    line-height: 20px;
-    font-size: 16px;
-  }
-}
-
 #features {
   padding-top: 120px;
+
+  .icon-aside > svg {
+    font-size: 50px;
+  }
+  .box-item {
+    margin-bottom: 88px;
+  }
+
+  .content-feature {
+    h3 {
+      margin-bottom: 20px;
+    }
+
+    p {
+      margin-bottom: 89px;
+    }
+  }
+
+  .box-content {
+    h4 {
+      color: $black;
+      line-height: 24px;
+      font-size: 22px;
+    }
+    p {
+      color: $gray;
+      line-height: 20px;
+      font-size: 16px;
+    }
+  }
 }
