--- a/src/assets/styles/components/_features.scss
+++ b/src/assets/styles/components/_features.scss
@@ -1,5 +1,6 @@
 #features {
   padding-top: 120px;
+  padding-bottom: 80px;
 
   .icon-aside > svg {
     font-size: 50px;
@@ -11,10 +12,14 @@
   .content-feature {
     h3 {
       margin-bottom: 20px;
+      font-size: 32pt;
+      line-height: 32pt;
     }
 
     p {
       margin-bottom: 89px;
+      font-size: 20pt;
+      line-height: 24pt;
     }
   }
 
